--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 #ignore the git local files and the c9 project files
 .git
 .c9
-
+_utils
 # ignore the repositories where webpack puts the bundles
 dist/
 public/
